$ Fixed <pre><code> overflow.

--- a/archive_chan/static/archive_chan/css/style.scss
+++ b/archive_chan/static/archive_chan/css/style.scss
@@ -452,6 +452,10 @@ pre{
     margin: .5em 0;
 }
 
+code{
+    overflow: auto;
+}
+
 /*   Tags.   */
 .tags{
     li{
